[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
bytes = "1.8.0"
image = "0.20.1"
lazy_static = "1.5.0"
lru = "0.12.5"
percent-encoding = "2.3.1"
photon-rs = "0.3.2"
prost = "0.13.3"
reqwest = "0.11.27"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.13.3"
